added spring security and add review for a book endpoint

--- a/bookshop-auth-service/src/main/resources/application.properties
+++ b/bookshop-auth-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=8082
 spring.data.mongodb.uri=mongodb://localhost:27017/auth-service
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 google.clientId=309458224110-giv0rkhl3db0bjh8g1dt7fo2vt9faqfo.apps.googleusercontent.com
+jwt.secret=7b7nYgV6K7w3J6L+qkF2hXQn7Pz3pRrJ2pTrU/7W4sQ=
