--- a/bookshop-catalog-service/src/main/resources/application.properties
+++ b/bookshop-catalog-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=bookshop-catalog-service
 server.port=8081
 spring.data.mongodb.uri=mongodb://localhost:27017/catalog
+auth.service.url=http://localhost:8082
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+jwt.secret=7b7nYgV6K7w3J6L+qkF2hXQn7Pz3pRrJ2pTrU/7W4sQ=
