--- a/bookshop-ui/package.json
+++ b/bookshop-ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "google-one-tap": "^1.0.6",
